--- a/index.html
+++ b/index.html
@@ -131,20 +131,99 @@
               you've been using the scooter, your traveling distance, and many more things all in an easy to use app.
             </p>
             <div class="communication__start_end">
-               <button class="btn">
-                 Learn More
-               </button>
+              <button class="btn">
+                Learn More
+              </button>
             </div>
           </div>
           <div class="communication__end">
-              <picture class="cummunication__end-img">
-                   <img src="./img/Group 332x.jpg" alt="boy of searching ">
-              </picture>
+            <picture class="cummunication__end-img">
+              <img src="./img/Group 332x.jpg" alt="boy of searching " width="445px" height="445px">
+            </picture>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="communication middle">
+      <div class="container">
+        <div class="communication__wrapper">
+          <div class="communication__end">
+            <picture class="cummunication__end-img">
+              <img src="./img/Bitmap Copy (1).jpg" alt="boy of searching " width="445px" height="445px">
+            </picture>
+          </div>
+          <div class="communication__start">
+            <h2 class="communication__start-title">Coming to a city near you</h2>
+            <p class="communication__start-text">
+              Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you
+              want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.
+            </p>
+            <div class="communication__start_end">
+              <button class="btn">
+                Learn More
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <section class="communication">
+      <div class="container">
+        <div class="communication__wrapper">
+          <div class="communication__start">
+            <h2 class="communication__start-title">Zero hassle payments</h2>
+            <p class="communication__start-text">
+              Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link
+              your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a
+              month.
+            </p>
+            <div class="communication__start_end">
+              <button class="btn">
+                Learn More
+              </button>
+            </div>
+          </div>
+          <div class="communication__end">
+            <picture class="cummunication__end-img">
+              <img src="./img/Group 27 Copy 2.jpg" alt="boy of searching " width="445px" height="445px">
+            </picture>
           </div>
         </div>
       </div>
     </section>
     <!--communication finish-->
+
+    <!--footer start-->
+     <section class="site-footer">
+         <div class="container">
+          <h3 class="visually-hidden"> footer </h3>
+             <div class="footer__wrapper">
+                <h1 class="footer__heading">
+                  Sign up and Scoot off today
+                </h1>
+                <div>
+                    <div class="footer__wrapper-Appstore">
+                        <a class="footer__wrapper-link" href="https://www.apple.com/app-store/">
+                            <div class="footer_Appstore_end">
+                                <p class="site-footer__store">Available on the</p>
+                                <h4 class="site-footer-AppName">AppStore</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="footer__wrapper-GooglePlay">
+                         <a  class="footer__wrapper-link" href="https://play.google.com/store/games">
+                            <div class="footer__GooglePlay_end">
+                                <p class="site-footer__store">Get it on</p>
+                                <h4 class="site-footer-AppName">GooglePlay</h4>
+                            </div>
+                         </a>
+                    </div>
+                </div>
+             </div>
+         </div>
+     </section>
+    <!--footer end -->
   </main>
 
   <!-- FOOTER -->
